--- a/apps/web/lib/provider_vault_web_web/controllers/symptom_html/index.html.heex
+++ b/apps/web/lib/provider_vault_web_web/controllers/symptom_html/index.html.heex
@@ -139,7 +139,7 @@
     providersSection.classList.add('hidden');
     
     try {
-      const response = await fetch('/symptoms/search', {
+      const response = await fetch('/api/symptoms/search', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
